align the items center and fix the margins

--- a/css/styles.css
+++ b/css/styles.css
@@ -270,7 +270,7 @@ nav a:hover {
 
 .about {
   padding-top: 15vh;
-  height: 170vh;
+  height: 90vh;
   width: auto;
   text-align: center;
   background-color: #ede4d6;
@@ -361,11 +361,13 @@ footer {
   height: 30px;
 }
 /* Contact Form Styling */
+
+
 .contact-form h2 {
   font-size: 2rem;
   color: #333;
-  margin-left: 37%;
-  margin-bottom: 10px 0;
+  text-align: center;
+  margin: 50px;
 }
 
 .contact-form form {
@@ -376,12 +378,12 @@ footer {
 
 .contact-form label {
   font-size: 1rem;
-  margin-top: 10px;
   color: #333;
   text-align: left;
   width: 100%;
   max-width: 400px;
   font-family: bold;
+ 
 }
 
 .contact-form input, .contact-form textarea {
@@ -395,6 +397,7 @@ footer {
 }
 
 .contact-form button {
+  margin-top: 10px;
   padding: 10px 20px;
   background-color: #4c3c32;
   color: #fff;
@@ -405,13 +408,15 @@ footer {
 }
 
 .contact-form button:hover {
-  background-color: #0056b3;
+  background-color:#7e685b;
 }
 /* Map Section */
 .map h2 {
   font-size: 2rem;
   color: #333;
-  margin-bottom: 20px;
+  margin: 20px 0px 20px 0px;
+  height: auto;
+  text-align: center;
 }
 
 .map .map-container {
